--- a/my-app/src/styles/index.module.css
+++ b/my-app/src/styles/index.module.css
@@ -1,12 +1,22 @@
-.div {
-    background-color: white;
+.indexMain {
+    background-color: aqua;
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    
 }
 
 .logo {
     width: 100vw;
-    height: 100vh;
-    background-color: white;
+    height: 100px;
+    background-color: rgb(189, 36, 36);
+}
+
+.p {
+    width: 100vw;
+}
+
+.button {
+    width: 2rem;
 }
