--- a/my-app/src/styles/index.module.css
+++ b/my-app/src/styles/index.module.css
@@ -1,22 +1,35 @@
 .indexMain {
-    background-color: aqua;
     padding: 0;
     margin: 0;
     display: flex;
     flex-direction: column;
-    
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    text-align: center;
 }
 
 .logo {
-    width: 100vw;
-    height: 100px;
-    background-color: rgb(189, 36, 36);
+    background-color: transparent;
+   
 }
 
 .p {
-    width: 100vw;
+    align-items: center;
+    font-size: var(--font-size-h3);
+    font-family: var(--font-style-heading);
+    padding: 8px;
+    
 }
 
 .button {
-    width: 2rem;
+    width: 40px;
+    height: 40px;
+
+}
+
+.reserve {
+    background-color: var(--secondarycolor);
+    color: white;
 }
