--- a/my-app/src/styles/navbar.module.css
+++ b/my-app/src/styles/navbar.module.css
@@ -6,7 +6,9 @@
     height: 3rem;
     position: fixed;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    position: fixed;
+    bottom: 0;
 }
 
 .button {
@@ -14,7 +16,7 @@
     border: none;
     padding: 1rem;
     font-size: 1rem;
-    width: 10em;
+    width: 100%;
     border-radius: 1rem;
     color: lightcoral;
     box-shadow: 0 0.4rem #dfd9d9;
@@ -28,7 +30,7 @@
    }
    
    .button:hover:not(:disabled) {
-    background: rgb(28, 4, 4);
+    background: var(--secondarycolor);
     color: white;
     text-shadow: 0 0.1rem #bcb4b4;
    }
