--- a/my-app/src/styles/infopage.module.css
+++ b/my-app/src/styles/infopage.module.css
@@ -4,3 +4,32 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.p {
+    position: absolute;
+    width: 317px;
+    height: 550px;
+    left: 78px;
+    top: 120px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: justify;
+    color: #000000;
+}
+
+.h2 {
+    position: absolute;
+    width: 160px;
+    height: 26px;
+    left: 157px;
+    top: 32px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 44px;
+    color: #000000;
+}
