--- a/my-app/src/styles/homepage.module.css
+++ b/my-app/src/styles/homepage.module.css
@@ -94,6 +94,15 @@
     font-size: var(--font-size-paragraph-1);
 
 }
+.price {
+ 
+    height: 2.5rem;
+   
+    color: var(--secondarycolor);
+    font-family: var(--font-style-heading);
+    font-size: var(--font-size-paragraph-1);
+
+}
 
 .errorMessage {
     font-family: var(--font-style-heading);
