--- a/my-app/src/styles/index.module.css
+++ b/my-app/src/styles/index.module.css
@@ -17,10 +17,12 @@
 
 .p {
     align-items: center;
-    font-size: var(--font-size-h3);
+    font-size: 2.25rem;
     font-family: var(--font-style-heading);
     padding: 8px;
-    
+    font-weight: 700;
+    width: 90vw;
+    color: var(--secondarycolor);
 }
 
 /* CSS */
