--- a/my-app/src/styles/index.module.css
+++ b/my-app/src/styles/index.module.css
@@ -28,6 +28,57 @@
 /* CSS */
 .button1 {
   appearance: none;
+  background-color: var(--secondarycolor);
+  border: 2px solid #1A1A1A;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #f5f3f3;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 22px;
+  font-weight: 700;
+  line-height: normal;
+  margin: 0;
+  min-height: 60px;
+  min-width: 0;
+  outline: none;
+  padding: 16px 24px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+  will-change: transform;
+  margin-bottom: 70px;
+
+}
+
+.button1:disabled {
+  pointer-events: none;
+}
+
+.button1:hover {
+  color: #fff;
+  background-color: #1A1A1A;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.button1:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+
+
+
+
+/* button 2 */
+
+.button2 {
+  appearance: none;
   background-color: transparent;
   border: 2px solid #1A1A1A;
   border-radius: 15px;
@@ -52,20 +103,22 @@
   touch-action: manipulation;
   width: 100%;
   will-change: transform;
+  margin-bottom: 70px;
+
 }
 
-.button1:disabled {
+.button2:disabled {
   pointer-events: none;
 }
 
-.button1:hover {
+.button2:hover {
   color: #fff;
   background-color: #1A1A1A;
   box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
   transform: translateY(-2px);
 }
 
-.button1:active {
+.button2:active {
   box-shadow: none;
   transform: translateY(0);
 }
