--- a/my-app/src/styles/payment.module.css
+++ b/my-app/src/styles/payment.module.css
@@ -17,7 +17,7 @@
     margin-top: 4px  ;
 }
 .paymentContainer{
-    padding: 2rem;
+    padding: 1.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -78,4 +78,28 @@ gap: 24px;
 .inputContainer{
     display: flex;
 flex-direction: column;
+}
+
+.title{
+  font-family: var(--font-style-heading);
+  color: rgb(125, 173, 52);
+  font-size: 1.75rem;
+}
+
+.p {
+  padding: 10px;
+  text-align: center;
+  font-family: var(--font-style-heading);
+  color: var(--secondarycolor);
+}
+
+.mbway {
+  margin-top: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  background-color: var(--primarycolor);
+  border: 1px solid var(--secondarycolor);
 }
