--- a/my-app/src/styles/index.module.css
+++ b/my-app/src/styles/index.module.css
@@ -41,16 +41,16 @@
   line-height: normal;
   margin: 0;
   min-height: 60px;
-  min-width: 0;
+  width: 80vw;
   outline: none;
-  padding: 16px 24px;
+ 
   text-align: center;
   text-decoration: none;
   transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  width: 100%;
+  
   will-change: transform;
   margin-bottom: 70px;
 
@@ -101,7 +101,7 @@
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  width: 100%;
+  width: 80vw;
   will-change: transform;
   margin-bottom: 70px;
 
