--- a/my-app/src/styles/chek.module.css
+++ b/my-app/src/styles/chek.module.css
@@ -2,11 +2,17 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-size: var(--font-size-h3);
+    font-size: 1.5rem;
     font-family: var(--font-style-heading);
-    margin-top: 200px;
+    margin-top: 80px;
     display: flex;
     flex-direction: column;
+
+    border-radius: 4px;
+
+    color: var(--secondarycolor);
+    box-shadow: 3px 3px 8px -2px var(--secondarycolor);
+   
     
 }
 
@@ -16,4 +22,7 @@
     font-family: var(--font-style-heading);
 
 }    
+.Confirmationcontainer{
+  padding: 2rem;
+}
 
