--- a/my-app/src/styles/payment.module.css
+++ b/my-app/src/styles/payment.module.css
@@ -6,7 +6,6 @@
     color: var(--secondarycolor);
     font-size: var(--font-size-paragraph-1);
     font-family: var(--font-style-paragraph);
-
     box-shadow: 3px 3px 8px -2px var(--secondarycolor);
     background-color: #e0efd6;
 
@@ -21,6 +20,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 3rem;
 }
 
 .paymentContainer h3{
