--- a/my-app/src/styles/infopage.module.css
+++ b/my-app/src/styles/infopage.module.css
@@ -5,9 +5,14 @@
     box-sizing: border-box;
     font-family: 'Inter';
     font-style: normal;
+    text-align: justify;
+    align-items: center;
+    justify-content: center;
 }
 
 .p {
+    align-items: center;
+    text-align: justify;
     position: absolute;
     width: 317px;
     height: 550px;
@@ -23,6 +28,8 @@
 }
 
 .h2 {
+    align-items: center;
+    
     position: absolute;
     width: 160px;
     height: 26px;
@@ -37,11 +44,14 @@
 }
 
 .logo {
+    text-align: justify;
     background-color: transparent;
     margin-left: 20px;
+    align-items: center;
 }
 
 .imgwrapper {
+    text-align: justify;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -51,11 +61,33 @@
 
 .img {
     width: 250px;
+    align-items: center;
 }
 
 .infowrapper {
+    align-items: center;
     margin: 20px;
     font-family: var(--font-style-heading);
     color: var(--secondarycolor);
+    text-align: justify;
+    padding-bottom: 100px;
+    
+}
 
+.main {
+    margin-bottom: 200px;
+    align-items: center;
+}
+
+.google {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+}
+
+.mapa {
+    justify-content: center;
+    align-items: center;
+    padding-left: 20%;
 }
